# nostrdizer-cli

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  THOUGHTS.md  justfile  shell.nix
.github/workflows/: ci.yml  rust.yml
nostrdizer/: Cargo.toml
nostrdizer/docs/: FLOW.md
nostrdizer/src/: errors.rs  lib.rs  maker.rs  podle.rs  taker.rs  types.rs  utils.rs
nostrdizer/src/bdk/: maker.rs  mod.rs  taker.rs  utils.rs
nostrdizer/src/bitcoincore/: maker.rs  mod.rs  taker.rs  types.rs  utils.rs
src/: main.rs
