[package]
name = "nostrdizer-cli"
version = "0.1.0"
edition = "2021"


[workspace]

[dependencies]
nostrdizer = { path = "nostrdizer" }
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.22", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
nostr_rust = { git = "https://github.com/thesimplekid/nostr_rust", branch = "nostrdizer"}
bitcoin = "0.29.2"
anyhow = "1"
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.3"
dotenvy = "0.15.6"
hex = "0.4.3"
