[package]
name = "nostrdizer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
secp256k1 = { version = "0.25", features = ["bitcoin_hashes", "global-context", "rand-std"] }
serde_json = "1.0.87"
# nostr_rust = { git = "https://github.com/thesimplekid/nostr_rust", branch = "nostrdizer"}
nostr_rust = "0.15.0"
# nostr_rust = { path = "../../nostr_rust" }
thiserror = "1"
url = "2"
bitcoin = "0.29.2"
# bitcoincore-rpc =  { path = "../../rust-bitcoincore-rpc/client" } 
# bitcoincore-rpc-json = { path = "../../rust-bitcoincore-rpc/json"} 
bitcoincore-rpc =  { git = "https://github.com/thesimplekid/rust-bitcoincore-rpc",  branch = "nostrdizer"}
bitcoincore-rpc-json = { git = "https://github.com/thesimplekid/rust-bitcoincore-rpc", branch= "nostrdizer" }
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.9.3"
hex = "0.4.3"
